--- a/Crawl/Crawl/Views/Characters/CharacterDetailPage.xaml
+++ b/Crawl/Crawl/Views/Characters/CharacterDetailPage.xaml
@@ -4,7 +4,6 @@
              x:Class="Crawl.Views.CharacterDetailPage"
              Title="{Binding Title}">
 
-
     <ContentPage.ToolbarItems>
         <ToolbarItem Text="Edit" Clicked="Edit_Clicked" />
         <ToolbarItem Text="Delete" Clicked="Delete_Clicked" />
@@ -42,6 +41,50 @@
                     HorizontalOptions="Center"/>
             </StackLayout>
 
-        </StackLayout>
+			<StackLayout
+                Orientation="Horizontal"
+                HorizontalOptions="Start">
+				<Label Text="Attack : " 
+                   FontSize="Medium" 
+                   HorizontalOptions="Start"/>
+				<Label Text="{Binding Data.Attack}" 
+                    FontSize="Medium" 
+                    HorizontalOptions="Center"/>
+			</StackLayout>
+
+			<StackLayout
+                Orientation="Horizontal"
+                HorizontalOptions="Start">
+				<Label Text="Defense : " 
+                   FontSize="Medium" 
+                   HorizontalOptions="Start"/>
+				<Label Text="{Binding Data.Defense}" 
+                    FontSize="Medium" 
+                    HorizontalOptions="Center"/>
+			</StackLayout>
+
+			<StackLayout
+                Orientation="Horizontal"
+                HorizontalOptions="Start">
+				<Label Text="Speed : " 
+                   FontSize="Medium" 
+                   HorizontalOptions="Start"/>
+				<Label Text="{Binding Data.Speed}" 
+                    FontSize="Medium" 
+                    HorizontalOptions="Center"/>
+			</StackLayout>
+
+			<StackLayout
+                Orientation="Horizontal"
+                HorizontalOptions="Start">
+				<Label Text="EXP : " 
+                   FontSize="Medium" 
+                   HorizontalOptions="Start"/>
+				<Label Text="{Binding Data.Attack}" 
+                    FontSize="Medium" 
+                    HorizontalOptions="Center"/>
+			</StackLayout>
+
+		</StackLayout>
     </ScrollView>
 </ContentPage>
