--- a/Crawl/Crawl/Views/Characters/CharacterNewPage.xaml
+++ b/Crawl/Crawl/Views/Characters/CharacterNewPage.xaml
@@ -5,14 +5,14 @@
 		     Title="Add New Character">
     
     <ContentPage.ToolbarItems>
-        <ToolbarItem Text="Save" Clicked="Save_Clicked" />
         <ToolbarItem Text="Cancel" Clicked="Cancel_Clicked" />
     </ContentPage.ToolbarItems>
 
     <ContentPage.Content>
         <ScrollView>
             <StackLayout Spacing="20" Padding="15">
-                <Label Text="Character Create Page" FontSize="Small" />
+                <Label Text="Character" FontSize="Medium" VerticalOptions="Center" HorizontalOptions="Center"/>
+                <Label Text="Creation" FontSize="Small" VerticalOptions="Center" HorizontalOptions="Center"/>
                 <Grid
                     RowSpacing="1"
                     ColumnSpacing="2"
@@ -29,7 +29,7 @@
                         <Label 
                             Text="Name" 
                             FontSize="Medium" 
-                            HorizontalOptions="Start"
+                            HorizontalOptions="Start" 
                             VerticalOptions="Center"/>
                     </StackLayout>
                     <StackLayout Grid.Row="0" Grid.Column="1">
@@ -42,7 +42,7 @@
 
                     <StackLayout Grid.Row="1" Grid.Column="0">
                         <Label 
-                            Text="Age" 
+                            Text="Class" 
                             FontSize="Medium" 
                             HorizontalOptions="Start"
                             VerticalOptions="Center"/>
@@ -53,7 +53,13 @@
                             FontSize="Small" 
                             Margin="0" 
                             VerticalOptions="Center"/>
-                    </StackLayout>          
+                    </StackLayout>  
+                    <StackLayout Grid.Row="2" Grid.Column="1">
+                    <Button Text="Proceed with Narwhal Knighting Ceremony"
+                            HorizontalOptions="Center"
+                            Clicked="Save_Clicked" 
+                             />
+                    </StackLayout>  
                 </Grid>
             </StackLayout>
         </ScrollView>
