--- a/Crawl/Crawl/Views/MainPage.xaml
+++ b/Crawl/Crawl/Views/MainPage.xaml
@@ -4,21 +4,11 @@
             xmlns:views="clr-namespace:Crawl.Views"
             x:Class="Crawl.Views.MainPage">
     <TabbedPage.Children>
-        <NavigationPage Title="Manage">
-            <NavigationPage.Icon>
+   
+        <NavigationPage Title="Start">
+             <NavigationPage.Icon>
                 <OnPlatform x:TypeArguments="FileImageSource">
                     <On Platform="iOS" Value="tab_feed.png"/>
-                </OnPlatform>
-            </NavigationPage.Icon>
-            <x:Arguments>
-                <views:ManagePage />
-            </x:Arguments>
-        </NavigationPage>
-        
-        <NavigationPage Title="About">
-            <NavigationPage.Icon>
-                <OnPlatform x:TypeArguments="FileImageSource">
-                    <On Platform="iOS" Value="tab_about.png"/>
                 </OnPlatform>
             </NavigationPage.Icon>
             <x:Arguments>
@@ -26,27 +16,48 @@
             </x:Arguments>
         </NavigationPage>
         
-        <NavigationPage Title="Week2Page">
-            <NavigationPage.Icon>
-                <OnPlatform x:TypeArguments="FileImageSource">
-                    <On Platform="iOS" Value="tab_about.png"/>
-                </OnPlatform>
-            </NavigationPage.Icon>
-            <x:Arguments>
-                <views:Week2Page />
-            </x:Arguments>
-        </NavigationPage>
-        
-        <NavigationPage Title="Home">
+        <NavigationPage Title="Item">
             <NavigationPage.Icon>
                 <OnPlatform x:TypeArguments="FileImageSource">
                     <On Platform="iOS" Value="tab_feed.png"/>
                 </OnPlatform>
             </NavigationPage.Icon>
             <x:Arguments>
-                <views:OpeningPage />
+                <views:ItemsPage />
             </x:Arguments>
         </NavigationPage>
-        
-    </TabbedPage.Children>
+
+        <NavigationPage Title="Character">
+            <NavigationPage.Icon>
+                <OnPlatform x:TypeArguments="FileImageSource">
+                    <On Platform="iOS" Value="tab_feed.png"/>
+                </OnPlatform>
+            </NavigationPage.Icon>
+            <x:Arguments>
+                <views:CharactersPage />
+            </x:Arguments>
+        </NavigationPage>
+
+        <NavigationPage Title="Monster">
+            <NavigationPage.Icon>
+                <OnPlatform x:TypeArguments="FileImageSource">
+                    <On Platform="iOS" Value="tab_feed.png"/>
+                </OnPlatform>
+            </NavigationPage.Icon>
+            <x:Arguments>
+                <views:MonstersPage />
+            </x:Arguments>
+        </NavigationPage>
+
+        <NavigationPage Title="Score">
+            <NavigationPage.Icon>
+                <OnPlatform x:TypeArguments="FileImageSource">
+                    <On Platform="iOS" Value="tab_feed.png"/>
+                </OnPlatform>
+            </NavigationPage.Icon>
+            <x:Arguments>
+                <views:ScoresPage />
+            </x:Arguments>
+        </NavigationPage>
+    </TabbedPage.Children>  
 </TabbedPage>
