--- a/Crawl/Crawl/Views/Characters/CharactersPage.xaml
+++ b/Crawl/Crawl/Views/Characters/CharactersPage.xaml
@@ -36,7 +36,7 @@
                        LineBreakMode="WordWrap"
                        Style="{DynamicResource ListItemTextStyle}"
                        FontSize="16" />
-                    <Label Text="{Binding Age}"
+                    <Label Text="{Binding Level}"
                        LineBreakMode="WordWrap"
                        Style="{DynamicResource ListItemTextStyle}"
                        FontSize="16" />
