--- a/Crawl/Crawl/Views/Characters/CharacterDetailPage.xaml
+++ b/Crawl/Crawl/Views/Characters/CharacterDetailPage.xaml
@@ -30,17 +30,6 @@
                     HorizontalOptions="Center"/>
             </StackLayout>
 
-            <StackLayout
-                Orientation="Horizontal"
-                HorizontalOptions="Start">
-                <Label Text="Age : " 
-                   FontSize="Medium" 
-                   HorizontalOptions="Start"/>
-                <Label Text="{Binding Data.Age}" 
-                    FontSize="Medium" 
-                    HorizontalOptions="Center"/>
-            </StackLayout>
-
 			<StackLayout
                 Orientation="Horizontal"
                 HorizontalOptions="Start">
@@ -88,7 +77,7 @@
 			<StackLayout
                 Orientation="Horizontal"
                 HorizontalOptions="Start">
-				<Label Text="Max Health : " 
+				<Label Text="EXP : " 
                    FontSize="Medium" 
                    HorizontalOptions="Start"/>
 				<Label Text="{Binding Data.ExperienceTotal}" 
