--- a/Crawl/Crawl/Views/Characters/CharactersPage.xaml
+++ b/Crawl/Crawl/Views/Characters/CharactersPage.xaml
@@ -36,6 +36,10 @@
                        LineBreakMode="WordWrap"
                        Style="{DynamicResource ListItemTextStyle}"
                        FontSize="16" />
+					<Label Text="Level:"
+                       LineBreakMode="WordWrap"
+                       Style="{DynamicResource ListItemTextStyle}"
+                       FontSize="16" />
                     <Label Text="{Binding Level}"
                        LineBreakMode="WordWrap"
                        Style="{DynamicResource ListItemTextStyle}"
