--- a/Crawl/Crawl/Views/Characters/CharactersPage.xaml
+++ b/Crawl/Crawl/Views/Characters/CharactersPage.xaml
@@ -35,6 +35,7 @@
                     <Label Text="{Binding Name}"
                        LineBreakMode="WordWrap"
                        Style="{DynamicResource ListItemTextStyle}"
+					   FontAttributes="Bold"
                        FontSize="16" />
 					<Label Text="Level:"
                        LineBreakMode="WordWrap"
