--- a/Crawl/Crawl/Views/Characters/CharacterNewPage.xaml
+++ b/Crawl/Crawl/Views/Characters/CharacterNewPage.xaml
@@ -22,7 +22,7 @@
                     <!-- Name Entry -->
                     <StackLayout Grid.Row="0" Grid.Column="0">
                         <Label 
-                            Text="Name" 
+                            Text="Name: " 
                             FontSize="Medium" 
                             HorizontalOptions="Start" 
                             VerticalOptions="Center"/>
@@ -37,6 +37,14 @@
                     
                     <!-- Class -->
                     <StackLayout Grid.Row="1" Grid.Column="0">
+                        <Label 
+                            Text="Class: " 
+                            FontSize="Medium" 
+                            HorizontalOptions="Start" 
+                            VerticalOptions="Center"/>
+                    </StackLayout>
+                    
+                    <StackLayout Grid.Row="1" Grid.Column="1">
                         <Picker Title="Class"
                         VerticalOptions="CenterAndExpand"
                         Margin="30, 5"
@@ -50,7 +58,7 @@
                     </StackLayout>
                     
                     <!-- Save Button -->
-                    <StackLayout Grid.Row="1" Grid.Column="1">
+                    <StackLayout Grid.Row="2" Grid.Column="1">
                     <Button Text="Proceed with Narwhal Knighting Ceremony"
                             HorizontalOptions="Center"
                             Clicked="Save_Clicked" 
