--- a/Crawl/Crawl/Views/Monsters/MonstersPage.xaml
+++ b/Crawl/Crawl/Views/Monsters/MonstersPage.xaml
@@ -1,15 +1,57 @@
-﻿<?xml version="1.0" encoding="utf-8" ?>
+<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="Crawl.Views.MonstersPage"
               Title="{Binding Title}"
              x:Name="BrowseItemsPage">
     <ContentPage.ToolbarItems>
-
+        <ToolbarItem Text="Add" Clicked="AddMonster_Clicked" />
     </ContentPage.ToolbarItems>
     <ContentPage.Content>
         <StackLayout>
+            <ListView x:Name="MonstersListView"
+              ItemsSource="{Binding Dataset}"
+              VerticalOptions="FillAndExpand"
+               HasUnevenRows="true"
+               RefreshCommand="{Binding LoadItemsCommand}"
+               IsPullToRefreshEnabled="true"
+               IsRefreshing="{Binding IsBusy, Mode=OneWay}"
+               CachingStrategy="RecycleElement"
+               ItemSelected="OnItemSelected">
+            <ListView.ItemTemplate>
+              <DataTemplate>
+                <ViewCell>
+                  <StackLayout Padding="10"
+                               Orientation="Horizontal"
+                               VerticalOptions="Start"
+                               HorizontalOptions="Start">
 
+                    <StackLayout>
+                      <StackLayout Orientation="Horizontal">
+                        <Label Text="Name:"
+                           LineBreakMode="WordWrap"
+                           Style="{DynamicResource ListItemTextStyle}"
+                           FontSize="16" />
+                        <Label Text="{Binding Name}"
+                           LineBreakMode="WordWrap"
+                           Style="{DynamicResource ListItemTextStyle}"
+                           FontAttributes="Bold"
+                           FontSize="16" />
+                        <Label Text="Class:"
+                           LineBreakMode="WordWrap"
+                           Style="{DynamicResource ListItemTextStyle}"
+                           FontSize="16" />
+                        <Label Text="{Binding Class.name}"
+                           LineBreakMode="WordWrap"
+                           Style="{DynamicResource ListItemTextStyle}"
+                           FontSize="16" />
+                      </StackLayout>
+                    </StackLayout>
+                  </StackLayout>
+                </ViewCell>
+              </DataTemplate>
+            </ListView.ItemTemplate>
+          </ListView>
         </StackLayout>
     </ContentPage.Content>
 </ContentPage>
