--- a/Crawl/Crawl/Views/Characters/CharacterDeletePage.xaml
+++ b/Crawl/Crawl/Views/Characters/CharacterDeletePage.xaml
@@ -16,10 +16,10 @@
                 Orientation="Horizontal"
                 HorizontalOptions="Start">
                 <Label Text="Name : " 
-                   FontSize="Medium" 
+                   FontSize="Small" 
                    HorizontalOptions="Start"/>
                 <Label Text="{Binding Data.Name}" 
-                    FontSize="Medium" 
+                    FontSize="Small" 
                     HorizontalOptions="Center"/>
             </StackLayout>
 
@@ -27,10 +27,10 @@
                 Orientation="Horizontal"
                 HorizontalOptions="Start">
 				<Label Text="Class : " 
-                   FontSize="Medium" 
+                   FontSize="Small" 
                    HorizontalOptions="Start"/>
 				<Label Text="{Binding Data.Class.name}" 
-                    FontSize="Medium" 
+                    FontSize="Small" 
                     HorizontalOptions="Center"/>
 			</StackLayout>
 
@@ -38,10 +38,10 @@
                 Orientation="Horizontal"
                 HorizontalOptions="Start">
                 <Label Text="Level : " 
-                   FontSize="Medium" 
+                   FontSize="Small" 
                    HorizontalOptions="Start"/>
                 <Label Text="{Binding Data.Level}" 
-                    FontSize="Medium" 
+                    FontSize="Small" 
                     HorizontalOptions="Center"/>
             </StackLayout>
             
@@ -51,10 +51,10 @@
                 Orientation="Horizontal"
                 HorizontalOptions="Start">
                 <Label Text="Attack : " 
-                   FontSize="Medium" 
+                   FontSize="Small" 
                    HorizontalOptions="Start"/>
                 <Label Text="{Binding Data.Attribute.Attack}" 
-                    FontSize="Medium" 
+                    FontSize="Small" 
                     HorizontalOptions="Center"/>
             </StackLayout>
 
@@ -62,10 +62,10 @@
                 Orientation="Horizontal"
                 HorizontalOptions="Start">
                 <Label Text="Defense : " 
-                   FontSize="Medium" 
+                   FontSize="Small" 
                    HorizontalOptions="Start"/>
                 <Label Text="{Binding Data.Attribute.Defense}" 
-                    FontSize="Medium" 
+                    FontSize="Small" 
                     HorizontalOptions="Center"/>
             </StackLayout>
 
@@ -73,10 +73,10 @@
                 Orientation="Horizontal"
                 HorizontalOptions="Start">
                 <Label Text="Speed : " 
-                   FontSize="Medium" 
+                   FontSize="Small" 
                    HorizontalOptions="Start"/>
                 <Label Text="{Binding Data.Attribute.Speed}" 
-                    FontSize="Medium" 
+                    FontSize="Small" 
                     HorizontalOptions="Center"/>
             </StackLayout>
 
@@ -84,10 +84,10 @@
                 Orientation="Horizontal"
                 HorizontalOptions="Start">
                 <Label Text="Max Health : " 
-                   FontSize="Medium" 
+                   FontSize="Small" 
                    HorizontalOptions="Start"/>
                 <Label Text="{Binding Data.Attribute.MaxHealth}" 
-                    FontSize="Medium" 
+                    FontSize="Small" 
                     HorizontalOptions="Center"/>
             </StackLayout>
             
